# gio_pyio

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
doc/source/: index.rst
docs/source/: conf.py  index.rst
src/gio_pyio/: __init__.py
src/gio_pyio/wrappers/: stream_wrapper.py
tests/: example.gresource.xml  test_gio_pyio.py
