# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gio-pyio"
version = "0.0.5"
authors = [
  { name="Christoph Matthias Kohnen", email="christoph.kohnen@disroot.org" },
]
description = "Python like IO for gio"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyGObject >= 3.42.2",
]

[project.urls]
Repository = "https://github.com/cmkohnen/gio_pyio"
Issues = "https://github.com/cmkohnen/gio_pyio/issues"
Documentation = "https://gio-pyio.readthedocs.io"